--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+@import './assets/variables.css';
+
+@font-face {
+  font-family: 'cubanoregular';
+  src: url('./assets/fonts/cubano-regular-webfont.woff2') format('woff2'), url('./assets/fonts/cubano-regular-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
   margin: 0;
   padding: 0;
