--- a/src/components/MobileNavigation/index.css
+++ b/src/components/MobileNavigation/index.css
@@ -75,7 +75,7 @@
   height: 100vh;
   opacity: 0;
   transition: opacity 500ms ease-in-out;
-  pointer-events: none;
+  /* pointer-events: none; */
 }
 
 .mobilenav-backdrop.open {
