--- a/src/components/VideoCard/index.css
+++ b/src/components/VideoCard/index.css
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  transition: all 250ms;
 }
 
 @media (hover: hover) {
